--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "base32"
   ],
   "license": "MIT",
-  "repository": "git://github.com/bcoin-org/bs32.git",
-  "homepage": "https://github.com/bcoin-org/bs32",
+  "repository": "git://github.com/raptoracle/bs32.git",
+  "homepage": "https://github.com/raptoracle/bs32",
   "bugs": {
-    "url": "https://github.com/bcoin-org/bs32/issues"
+    "url": "https://github.com/raptoracle/bs32/issues"
   },
   "author": "Christopher Jeffrey <chjjeffrey@gmail.com>",
   "main": "./lib/bs32.js",
@@ -19,11 +19,11 @@
     "test": "bmocha --reporter spec test/*-test.js"
   },
   "dependencies": {
-    "bsert": "~0.0.10"
+    "bsert": "git+https://github.com/raptoracle/bsert.git#semver:~0.0.13"
   },
   "devDependencies": {
-    "bmocha": "^2.1.0",
-    "bts-type-deps": "^0.0.3"
+    "bmocha": "git+https://github.com/raptoracle/bmocha.git#semver:=2.2.0",
+    "bts-type-deps": "git+https://github.com/raptoracle/bts-type-deps.git#semver:=0.0.3"
   },
   "engines": {
     "node": ">=8.0.0"
